website/translated_docs/ja/version-1.0.0/components/mobile/mobile-checkbox.md
---
id: version-1.0.0-mobile-checkbox
title: MobileCheckbox
sidebar_label: MobileCheckbox
original_id: mobile-checkbox
---

## Overview

MobileCheckbox は、複数選択のチェックボックスを表示します。 <iframe src="https://kuc-storybook.netlify.app/iframe.html?id=mobile-checkbox--document" title="mobile checkbox image" height="150px" mark="crwd-mark"></iframe>

---

## Specification

### Property

使用できるプロパティの一覧です。プロパティを指定して値を更新することができます。

| Name          | Type              | Default | Description            | Remark                                                 |
|:------------- |:----------------- |:------- |:---------------------- |:------------------------------------------------------ |
| className     | string            | ""      | コンポーネントの class 名       |                                                        |
| error         | string            | ""      | エラーに表示するテキスト           | 未指定、あるいは空文字の場合、error は表示されない                           |
| id            | string            | ""      | コンポーネントの id 名          |                                                        |
| label         | string            | ""      | コンポーネントの説明ラベル          | 未指定、あるいは空文字の場合、label は表示されない                           |
| borderVisible | boolean           | true    | 選択肢を囲う枠線の表示/非表示設定      |                                                        |
| disabled      | boolean           | false   | コンポーネントの選択可/不可設定       |                                                        |
| requiredIcon  | boolean           | false   | コンポーネントの必須アイコン表示/非表示設定 |                                                        |
| visible       | boolean           | true    | コンポーネントの表示/非表示設定       |                                                        |
| items         | Array\<Item\>   | []      | 表示する選択肢一覧              | items が配列以外の場合、エラーを出力する                                |
| Item.label    | string            | null    | 各選択肢のテキスト              | Item.label が未指定の場合、UI 上は Item.value の値が表示される           |
| Item.value    | string            | null    | 各選択肢の値                 | Item.value の値が重複した場合、エラーを出力する                          |
| value         | Array\<string\> | ""      | 選択されている値               | value が配列以外の場合、エラーを出力する<br>配列内の値が重複した場合、エラーを出力する |

### Event

指定できるイベントの一覧です。

| Name   | Type     | Description       | Remark                                                                                                                                                                   |
|:------ |:-------- |:----------------- |:------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| change | function | 値が変更された時のイベントハンドラ | 引数には Event の event オブジェクトをとる<br><br>event.detail で以下の値を受け取ることができる<br>event.detail.oldValue : 変更前の value の値<br>event.detail.value : 変更後の value の値 |

### Constructor

Checkbox(options) 使用できるコンストラクタの一覧です。

#### Parameter

| Name    | Type   | Default | Description                  | Remark         |
|:------- |:------ |:------- |:---------------------------- |:-------------- |
| options | object | {}      | コンポーネントのプロパティを含む JSON オブジェクト | options 内の値は任意 |

---

## Sample Code

全てのパラメータを指定した場合のサンプルコードです。

```javascript
const space = kintone.mobile.app.record.getSpaceElement('space');
const mobileCheckbox = new Kuc.MobileCheckbox({
  label: 'Fruit',
  requiredIcon: true,
  items: [
    {
      label: 'orange',
      value: 'Orange'
    },
    {
      label: 'apple',
      value: 'Apple'
    }
  ],
  value: ['Orange'],
  error: 'Error occurred!',
  className: 'options-class',
  id: 'options-id',
  visible: true,
  disabled: false,
  borderVisible: true
});
space.appendChild(mobileCheckbox);

mobileCheckbox.addEventListener('change', event => {
  console.log(event);
});
```
